Finish Static Pages

--- a/app/views/static_pages/contacts.html.erb
+++ b/app/views/static_pages/contacts.html.erb
@@ -1,2 +1,9 @@
-<h1>StaticPages#contacts</h1>
-<p>Find me in app/views/static_pages/contacts.html.erb</p>
+<% provide(:title, 'Contacts') %>
+<h1>Contacts</h1>
+<p>Contacte-nos</p>
+<p>
+   	<a href="http://pt.linkedin.com/in/diogocsc">Diogo Cordeiro</a>.
+</p>
+<p>
+   	<a href="http://www.quora.com/Escrita-Inteligente-LDA/followers#">Escrita Inteligente, Lda</a>.
+</p>
