--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,10 @@
-<h1>Recibos Online</h1>
-<p>
-	Esta é a página de entrada de
-	<a href=" http://www.recibo.pt">Recibos Online</a>.
-</p>
+<div class="center hero-unit">
+	<h1>Bem vindo a Recibos Online</h1>
+	<h2>
+		Esta é a página de entrada de
+		<a href=" http://www.recibo.pt">Recibos Online</a>.
+	</h2>
+	<%= link_to "Nova Loja", registo_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
