--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,3 +1,21 @@
 <% provide(:title, 'Nova Loja') %>
 <h1>Nova Loja</h1>
-<p>Find me in app/views/shops/new.html.erb</p>
+
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@shop) do |f| %>
+      <%= render 'shared/error_messages' %>
+
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :address %>
+      <%= f.text_field :address %>
+
+      <%= f.label :postalcode %>
+      <%= f.text_field :postalcode %>
+
+      <%= f.submit "Criar Nova Loja", class: "btn btn-large btn-primary" %>
+    <% end %>
+  </div>
+</div>
