--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Contacts", contacts_path %></li>
+          <li><%= link_to "Pesquisar", pesquisa_path %></li>
           <li><%= link_to "Lojas", '#' %></li>
         </ul>
       </nav>
