--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -15,6 +15,9 @@
       <%= f.label :postalcode %>
       <%= f.text_field :postalcode %>
 
+      <%= f.label :category %>
+      <%= f.text_field :category %>
+
       <%= f.submit "Criar Nova Loja", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
