--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -5,6 +5,10 @@
 		<h1>
 			<%= @shop.name %>
 		</h1>
+		<h5>
+			<p> <%= @shop.category %></p>
+			<%= @shop.address %>, <%= @shop.postalcode %>
+		</h5>
 	</section>
   </aside>
 </div>
