--- a/app/views/categories/_search.html.erb
+++ b/app/views/categories/_search.html.erb
@@ -3,10 +3,11 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_tag shops_path, :method => 'get' do %>
-    <p>
-      <%= text_field_tag :search, params[:search] %>
+    <p><%= text_field_tag :search, params[:search] %>
 
-      <%= submit_tag "Pesquisar",:name => nil, class: "btn btn-large btn-primary" %>
+      <%= select :search, params[:search], ([["Food"],["Vestuário"],["Categoria"]]) %>
+
+      <%= submit_tag "Pesquisar",:category => nil, class: "btn btn-large btn-primary" %>
     </p>
 
     <% end %>
