--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,8 @@
 		Esta é a página de entrada de
 		<a href=" http://www.recibo.pt">Recibos Online</a>.
 	</h2>
-	<%= link_to "Nova Loja", registo_path, class: "btn btn-large btn-primary" %>
+	<%= link_to "Nova Loja", registo_path, class: "btn btn-small btn-primary" %>
+	<%= link_to "Nova Categoria", categories_path, class: "btn btn-small btn-secondary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
