--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Contacts", contacts_path %></li>
           <li><%= link_to "Lojas", shops_path %></li>
-          <li><%= link_to "Categorias", categorias_path %></li>
+          <li><%= link_to "Categorias", categories_path %></li>
       </nav>
     </div>
   </div>
