--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -5,6 +5,9 @@
 		<h1>
 			<%= @shop.name %>
 		</h1>
+    <h4>
+      <%= @shop.category %>
+    </h4>
 		<h5>
 			<%= @shop.address %>, <%= @shop.postalcode %>
 		</h5>
