--- a/app/views/categories/_search.html.erb
+++ b/app/views/categories/_search.html.erb
@@ -2,12 +2,13 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_tag shops_path, :method => 'get' do %>
-    <p><%= text_field_tag :search, params[:search] %>
+    <%= form_for shops_path, :method => 'get' do %>
+    <p>
+      <%= text_field_tag :search, params[:search] %>
 
-      <%= select :search, params[:search], ([["Restaurante"],["Vestuario"],["Banco"]])%>
+      <%= select :search, params[:search], ([["Restaurante"],["Vestuario"],["Banco"],["Sapataria"]])%>
 
-      <%= submit_tag "Pesquisar",:category => nil, class: "btn btn-large btn-primary" %>
+      <%= submit_tag "Pesquisar",:name => nil, :category => nil, class: "btn btn-large btn-primary" %>
     </p>
 
     <% end %>
