--- a/app/views/shops/_search.html.erb
+++ b/app/views/shops/_search.html.erb
@@ -2,11 +2,11 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for shops_path, :method => 'get' do %>
+    <%= form_tag shops_path, :method => 'get' do %>
     <p>
       <%= text_field_tag :search, params[:search] %>
 
-      <%= select :search, params[:search], ([["Restaurante"],["Vestuario"],["Banco"]])%>
+      <%= select_tag "category",Category.find(:all).collect{|category|[category.category]}  %>
 
       <%= submit_tag "Pesquisar",:name => nil, :category => nil, class: "btn btn-large btn-primary" %>
     </p>
