--- a/app/views/categories/_search.html.erb
+++ b/app/views/categories/_search.html.erb
@@ -2,11 +2,11 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for shops_path, :method => 'get' do %>
+    <%= form_tag categories_path, :method => 'get' do %>
     <p>
       <%= text_field_tag :search, params[:search] %>
 
-      <%= select :search, params[:search], ([["Restaurante"],["Vestuario"],["Banco"],["Sapataria"]])%>
+      <%= select_tag("category", options_for_select(Category.find(:all).collect{|c| [c.category] }), {:include_blank => true })%>
 
       <%= submit_tag "Pesquisar",:name => nil, :category => nil, class: "btn btn-large btn-primary" %>
     </p>
