--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -6,7 +6,7 @@
 			<%= @shop.name %>
 		</h1>
     <h4>
-      <%= @shop.category %>
+      <%= @shop.category.category %>
     </h4>
 		<h5>
 			<%= @shop.address %>, <%= @shop.postalcode %>
