--- a/app/views/shops/_search.html.erb
+++ b/app/views/shops/_search.html.erb
@@ -4,11 +4,11 @@
   <div class="span6 offset3">
     <%= form_tag shops_path, :method => 'get' do %>
     <p>
-      <%= text_field_tag :search, params[:search] %>
+      <%= text_field_tag :search, params[:name] %>
 
-      <%= select_tag("category", options_for_select(Category.find(:all).collect{|c| [c.category] }), {:include_blank => true })%>
+      <%= select_tag(:category, options_for_select(@categories.map{|c| [c.category, c.id] }), {:include_blank => true })%>
 
-      <%= submit_tag "Pesquisar",:name => nil, :category => nil, class: "btn btn-large btn-primary" %>
+      <%= submit_tag "Pesquisar",:name => nil, :category_id => nil, class: "btn btn-large btn-primary" %>
     </p>
 
     <% end %>
