--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -9,7 +9,7 @@
       <%= @shop.category.category %>
     </h4>
 		<h5>
-			<%= @shop.address %>, <%= @shop.postalcode %>
+			<%= @shop.address %>, <%= @shop.postalcode %>, <%= @shop.city.city %>
 		</h5>
 	</section>
   </aside>
