--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,8 @@
 		<a href=" http://www.recibo.pt">Recibos Online</a>.
 	</h2>
 	<%= link_to "Nova Loja", registo_path, class: "btn btn-small btn-primary" %>
-	<%= link_to "Nova Categoria", regcat_path, class: "btn btn-small btn-secondary" %>
+	<%= link_to "Nova Categoria", regcat_path, class: "btn btn-small btn-primary" %>
+	<%= link_to "Nova Cidade", regcity_path, class: "btn btn-small btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
