--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,9 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Contacts", contacts_path %></li>
           <li><%= link_to "Lojas", shops_path %></li>
           <li><%= link_to "Categorias", categories_path %></li>
+          <li><%= link_to "Cidades", cities_path %></li>
       </nav>
     </div>
   </div>
